Changes for stage labels and stage positions
Original message:

WIP: unorganized and not even single-checked.

Fixes so far have not been carefully re-read.
Tests fail with,
loci.common.services.ServiceException: ome.xml.model.enums.EnumerationException: 'referenceFrame' not a supported value of 'class ome.xml.model.enums.UnitsLength'